<resources>
    <string name="app_name">SomosMas</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="contrase_a">contraseña</string>
    <string name="login">login</string>
    <string name="sing_up">sing up</string>
    <string name="somos_mas">SOMOS MAS</string>
    <string name="hello_word">hello word</string>
    <string name="title_activity_home3">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inicio">Inicio</string>
    <string name="nosotros">Nosotros</string>
    <string name="actividades">Actividades</string>
    <string name="novedades">Novedades</string>
    <string name="testimonios">Testimonios</string>
    <string name="contacto">Contacto</string>
    <string name="contribuye">Contribuye</string>
    <string name="something_went_wrong">something_went_wrong</string>
</resources>