<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/gris"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/navUs"
            android:title="@string/nosotros"/>
        <item
            android:id="@+id/navActivities"
            android:title="@string/actividades"/>
        <item
            android:id="@+id/navNovelties"
            android:title="@string/novedades"/>
        <item
            android:id="@+id/navTestimony"
            android:title="@string/testimonios"/>
        <item
            android:id="@+id/navContact"
            android:title="@string/contacto"/>
        <item
            android:id="@+id/navContributie"
            android:title="@string/contribuye"/>

    </group>
</menu>