<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@color/teal_200" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintopimg"
        android:src="@drawable/logo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/widthimp"
        android:layout_height="@dimen/heightimp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        app:errorEnabled="false"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="@dimen/widthimp"
        android:layout_height="@dimen/heightimp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        app:errorEnabled="false"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/widthimp"
        android:layout_height="@dimen/heightbtn"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:backgroundTint="@color/teal_200"
        android:text="@string/login" />

    <Button
        android:layout_width="@dimen/widthimp"
        android:layout_height="@dimen/heightbtn"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/sing_up"
        android:textColor="@color/cardview_dark_background" />
</LinearLayout>